tests/paczka2/big_fuzzy/78989860.err
Error in line 2: ZEnf8 S352 30,2
Error in line 11: S352 A358 33,2
Error in line 17: S352 S130 67,9
Error in line 22: KRF3QB S932 94,6
Error in line 21: S352 A358 68,3
Error in line 31: Ht6JF2sR S352 -1,7
Error in line 26: S352 S130 81,9
Error in line 30: 7CiJX7O S352 96,6
Error in line 18: Ht6JF2sR S352 269,7
Error in line 43: O9NUv799E S932 46,1
Error in line 27: zmOKn646TjP S932 42,5
Error in line 37: KRF3QB S130 33,2
Error in line 50: Ht6JF2sR S352 45,3
Error in line 61: KRF3QB S932 38,2
Error in line 58: ZEnf8 A358 82,8
Error in line 71: 7CiJX7O S130 38,0
Error in line 72: 7CiJX7O A358 54,0
Error in line 76: O9NUv799E A358 51,1
Error in line 62: KRF3QB A358 96,3
Error in line 88: Ht6JF2sR S130 253,38
Error in line 95: KRF3QB A358 84,9
Error in line 83: Ht6JF2sR S130 97,6
Error in line 99: S352 S130 95,5
Error in line 125: 7CiJX7O A358 25,0
Error in line 152: O9NUv799E S932 100,0
Error in line 161: 7CiJX7O S130 91,68
Error in line 167: 7CiJX7O Ä932 35,5
Error in line 164: 7CiJX7O S932 9,3
Error in line 181: Ht6JF2sR S352 -1,3
Error in line 180: O9NUv799E S932 69,8
Error in line 196: O9NUv799E S932 66,9
Error in line 189: 7CiJX7O S932 77,2
Error in line 199: O9NUv799E S130 6,6
Error in line 209: ZEnf8 A358 75,7
Error in line 195: Ht6JF2sR S352 230,7
Error in line 211: ZEnf8 S130 83,4
Error in line 215: zmOKn6g6TjP A358 17g,5
Error in line 204: KRF3QB S352 18,2
Error in line 222: 7CiJX7O S932 63,9
Error in line 221: S352 A358 116,7
Error in line 229: O9NUv799E S932 36,3
Error in line 237: zmOKn646TjP A358 180,9
Error in line 243: ZEnf8 A358 21,2
